[package]
name = "potomac"
version = "0.1.0"
edition = "2021"

[dependencies]
miette = { version = "7.2.0", features = ["fancy"] }
pest = "2.7.14"
pest_derive = "2.7.14"
thiserror = "1.0.65"
winnow = { version = "0.6.20", features = ["alloc", "unstable-recover", "debug"] }

[build-dependencies]
bindgen = "0.70.1"
anyhow = "1.0.91"
regex = "1.11.0"
